<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ACDDAlta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colormarronlatra"
    tools:context=".Dardealta">

    <Button
        android:id="@+id/btnatras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/atr_s"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/agregar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/colorrojolatra"
        android:text="@string/_1_cliente_2_administrador_3_camarero_4_cocinero_5_transportista"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/altaRol"
        android:layout_width="48dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/rol"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />


    <EditText
        android:id="@+id/altaCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/altaContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <EditText
        android:id="@+id/altaTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/tel_fono"
        android:inputType="textPersonName"
        android:maxLength="9"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/altaApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <EditText
        android:id="@+id/altaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/DDprueb"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:text="@string/textview"
        android:textColor="#E64A19"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>